# python-networking

./: .dockerignore  Dockerfile  README.md  TCPClient.py  TCPServer.py  UDPClient.py  UDPServer.py  app.py  flask_app.py  pyproject.toml  test.py
active/: TCPServer.py  UDPClient.py  UDPServer.py  active_server.py
flask/: Dockerfile  app.py
passive/: TCPClient.py  UDPClient.py  passive_server.py
